# image2questions

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  DEVELOPMENT_PLAN.md  README.md  boolean-questions.docx  boolean-questions.json  cli.py  create-agent.md  extracted_questions.docx  extracted_questions.json  image_to_json.py  image_to_word.py  image_to_word_truefalse.py  json_to_word.py  langgraph.json  main.py  multiple-choice.docx  multiple-choice.json  prompt.md  pyproject.toml  question.docx  questions.json  test.json  todo.md  verify_agent.py  word_to_json.py  word_to_json_truefalse.py
src/: __init__.py  cli.py
src/agent/: __init__.py  agent.py  graph.py  middleware.py  prompts.py
src/models/: __init__.py  config.py  questions.py
src/tools/: __init__.py  base.py  batch_processor.py  image_analysis.py  json_generator.py  validation.py  word_generator.py
src/utils/: __init__.py  file_utils.py  image_utils.py  question_json_utils.py
test-batch/: questions.json
tests/: conftest.py  test_agent.py  test_batch_processor.py  test_middleware.py  test_models.py  test_tools.py  test_utils.py  test_word_generator.py
tests/fixtures/: .gitkeep
